# ocaml-quickstart-minimal

./: GNUmakefile  TODO  dune  example.ml  v.ml
makefiles/: Makefile.debug  Makefile.dldc  Makefile.gnumake  Makefile.help  Makefile.version  Makefile.version.hg  Makefile.version.none
