; example                                -*- lisp -*-
; dune
; Matt Teichman <http://home.uchicago.edu/~teichman>

(env
  (dev                                  ; make warnings non-fatal
    (flags (:standard -warn-error -A))))
(alias
 (name default)
 (deps example.exe))
(executable
 (name example)
 (libraries prelude versioj cmdliner))
(rule
 (targets v.ml)
 (deps .merlin)
 (mode promote-until-clean)             ; copies v.ml from _build to the source tree, clean deletes
 (action (system "versioj %{targets} || echo 'let data = []' > %{targets}")))
; (install
;  (section bin)
;  (files (foo.exe as foo)))
